tdf#84517 show count of non-filtered rows in sc status bar

Filtered rows do not belong to a selection and are not pasted.

Change-Id: I03e1c03c42b508e24194b769a466611503ce44d7